--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -13,7 +13,7 @@
 
     <link href='http://fonts.googleapis.com/css?family=Arbutus+Slab&family=Cabin:600&family=Source+Code+Pro' rel='stylesheet' type='text/css'>
     <!-- Add custom CSS here -->
-    <link href="{{ .Site.BaseURL }}css/HPstyles.css" rel="stylesheet">
+    <link href="{{ .Site.BaseURL }}css/styles.css" rel="stylesheet">
     <link href="{{ .Site.BaseURL }}css/hugofont.css" rel="stylesheet">
     <link href="{{ .Site.BaseURL }}css/owl.carousel.css" rel="stylesheet">
     <link href="{{ .Site.BaseURL }}css/owl.theme.default.css" rel="stylesheet">
