--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,7 +9,7 @@
             <div class="row">
               <div class="col-md-6 col-md-offset-3 text-center">
                 {{ if (isset .Params "icon") }}
-                    <i class="lead-icon icon-{{ .Params.icon }}"></i>
+                    <i class="lead-icon fa fa-{{ .Params.icon }}"></i>
                 {{ end }}
                 <h2>{{ .Title }}</h2>
                 <p class="lead">
