--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,8 +4,9 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3 text-center">
         <ul class="list-inline">
-            <li><a href="http://twitter.com/spf13" class="icon-twitter icon-2x"></a></li>
-            <li><a href="http://github.com/spf13/hugo" class="icon-octocat icon-2x"></a></li>
+            {{ range .Site.Params.social }}
+                <li><a href="{{ .url }}"><i class="fa fa-{{ lower .title }} fa-2x" aria-hidden="true"></i></a></li>
+            {{ end }}
         </ul>
         <hr>
         <p>Copyright &copy; {{ .Site.Copyright }}</p>
