--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,6 +15,7 @@
     <!-- Add custom CSS here -->
     <link href="{{ .Site.BaseURL }}css/styles.css" rel="stylesheet">
     <link href="{{ .Site.BaseURL }}css/hugofont.css" rel="stylesheet">
+    <link href="{{ .Site.BaseURL }}css/font-awesome.min.css" rel="stylesheet">
     <link href="{{ .Site.BaseURL }}css/owl.carousel.css" rel="stylesheet">
     <link href="{{ .Site.BaseURL }}css/owl.theme.default.css" rel="stylesheet">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
