--- a/layouts/partials/top-block.html
+++ b/layouts/partials/top-block.html
@@ -6,8 +6,8 @@
         <div class="siteTitle">{{ .Site.Title }}</div>
         <div class="description">{{ .Site.Params.description }}</div>
         <div class="buttonbox">
-       {{ range .Site.Params.social }}
-            <a href="{{ .url }}" class="btn btn-default btn-lg"><i class="icon-{{ lower .title }}"></i> <span class="network-name">{{ .title }}</span></a>
+        {{ range .Site.Params.social }}
+            <a href="{{ .url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ lower .title }}-square" aria-hidden="true"></i> <span class="network-name">{{ .title }}</span></a>
         {{ end }}
         </div>
       </div>
