--- a/layouts/partials/top-block.html
+++ b/layouts/partials/top-block.html
@@ -3,8 +3,10 @@
     <div id="top" class="header">
       <div class="vert-text">
         <a href="#intro"><img src="{{ .Site.BaseURL }}{{ .Site.Params.mainIcon }}" class="logo"></a>
-        <div class="siteTitle">{{ .Site.Title }}</div>
-        <div class="description">{{ .Site.Params.description }}</div>
+        <div class="textUnderLogo">
+          <p>{{ .Site.Title }}</p>
+          <p>{{ .Site.Params.description }}</p>
+        </div>
         <div class="buttonbox">
         {{ range .Site.Params.social }}
             <a href="{{ .url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ lower .title }}-square" aria-hidden="true"></i> <span class="network-name">{{ .title }}</span></a>
