Added configurable header description and author values.

--- a/layouts/partials/top-block.html
+++ b/layouts/partials/top-block.html
@@ -5,7 +5,7 @@
         <a href="#intro"><img src="{{ .Site.BaseURL }}{{ .Site.Params.mainIcon }}" class="logo"></a>
         <div class="textUnderLogo">
           <p>{{ .Site.Title }}</p>
-          <p>{{ .Site.Params.description }}</p>
+          <p>{{ .Site.Params.Description }}</p>
         </div>
         <div class="buttonbox">
         {{ range .Site.Params.social }}
