--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,17 +1,13 @@
 <!-- Footer -->
-<footer id="footer">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3 text-center">
-        <ul class="list-inline">
-            {{ range .Site.Params.social }}
-                <li><a href="{{ .url }}"><i class="fa fa-{{ lower .title }} fa-2x" aria-hidden="true"></i></a></li>
-            {{ end }}
-        </ul>
-        <hr>
-        <p>Copyright &copy; {{ .Site.Copyright }}</p>
-      </div>
-    </div>
+<footer id="footer">    <div class="row">
+  <div class="col-md-6 col-md-offset-3 text-center">
+    <ul class="list-inline">
+      {{ range .Site.Params.social }}
+        <li><a href="{{ .url }}"><i class="fa fa-{{ lower .title }} fa-2x" aria-hidden="true"></i></a></li>
+      {{ end }}
+    </ul>
+    <hr>
+    <p>Copyright &copy; {{ .Site.Copyright }}</p>
   </div>
 </footer>
 <!-- /Footer -->
